cmake_minimum_required(VERSION 3.29)
project(ej_caso_final_integrador)

set(CMAKE_CXX_STANDARD 14)

add_executable(ej_caso_final_integrador
    .idea/.gitignore
    .idea/editor.xml
    .idea/ej-caso-final-integrador.iml
    .idea/misc.xml
    .idea/modules.xml
    .idea/vcs.xml
    "primer ejercicio/main.cpp"
        README.md)
